--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "symfony/dotenv": "^3.3"
+        "symfony/dotenv": "^3.3",
+        "nesbot/carbon": "^1.22"
     }
 }
