--- a/config.env.example
+++ b/config.env.example
@@ -1,7 +1,9 @@
 MINI=false
+PLUGIN_DIR=
 VERSION=
 STAGE=
-LASTUPDATE= # DD/MM/YYYY Recommended
+LASTUPDATE=
+LUFORMAT=d/m/Y # http://php.net/manual/en/function.date.php d/m/Y is DD/MM/YYYY
 SITE_TOTAL=3
 SITE_1_NAME=Dev
 SITE_1_URL=
