--- a/config.env.example
+++ b/config.env.example
@@ -1,9 +1,13 @@
+# For URL fields, start with protocol, and do not end the URL with a trailing slash. 
+# E.G. http://google.com is valid, http://google.com/ and google.com are not.
 MINI=false
 PLUGIN_DIR=
 VERSION=
 STAGE=
 LASTUPDATE=
 LUFORMAT=d/m/Y # http://php.net/manual/en/function.date.php d/m/Y is DD/MM/YYYY
+SITE_BROADCAST=false # Shows site list on a call to index.php?c=1
+SITE_EXT= # Main URL to a primary site using this plugin
 SITE_TOTAL=3
 SITE_1_NAME=Dev
 SITE_1_URL=
